--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Love stories'
 - !lcc 'PT'
+- GITenberg
 title: 'Die Stufe
 
   Fragment einer Liebe'
